Add machine translation

--- a/l10n/po/ja_JP/_posts/2022-02-23-quarkus-newsletter-17.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-23-quarkus-newsletter-17.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:9
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus Newsletter #17 - February'\n"
@@ -35,16 +35,26 @@ msgid ""
 "bibquery: [\"pub.urldate > '2022-01-13'\", \"pub.urldate <= '2022-02-22'\"]\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'クオークス ニュースレター #17 - 2月'\n"
+"date: 2022-02-23\n"
+"tags: newsletter\n"
+"synopsis: Quarkusとその周辺に関する最新のオンラインストーリー、記事、ビデオなどをキュレーションしてお届けします。\n"
+"author: jcobb\n"
+"bibquery: [\"pub.urldate > '2022-01-13'\", \"pub.urldate <= '2022-02-22'\"]\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:13
+#, fuzzy
 msgid "The February Newsletter has been published! This month, you can find an introduction to the new Quarkus Superheroes sample application as well as articles teaching you how to get started with Stork Service Discovery, Java Asynchronous Programming with Java, Distributed tracing with Istio, Quarkus and Jaeger, Monitoring Quarkus Prometheus and Grafana, and how to create a Quarkus extension for AWS Cloudwatch. Of course it includes selected Quarkus Insights podcast videos, top tweets, and the latest community events around Quarkus."
-msgstr ""
+msgstr "2月号ニュースレターが発行されました今月は、新しいQuarkus Superheroesサンプルアプリケーションの紹介や、Stork Service Discoveryの始め方、Javaによる非同期プログラミング、Istioによる分散トレース、QuarkusとJaeger、Quarkus PrometheusとGrafanaのモニタリング、AWS Cloudwatch用のQuarkus拡張の作成方法などを教える記事が掲載されています。もちろん、厳選されたQuarkus Insightsポッドキャストビデオ、トップツイート、Quarkusに関する最新のコミュニティイベントも収録されています。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:15
+#, fuzzy
 msgid "Check out https://quarkus.io/newsletter/17/[Newsletter #17]!"
-msgstr ""
+msgstr "link:https://quarkus.io/newsletter/17/[ニュースレター17号を]ご覧ください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-newsletter-17.adoc:17
