Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/mongodb.adoc.po
@@ -639,7 +639,7 @@ msgstr "ブラウザで `http://localhost:8080/fruits.html` を開きます。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/mongodb.adoc:312
 msgid "add new fruits to the list via the form"
-msgstr ""
+msgstr "フォームを使って新しいフルーツをリストに追加します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/mongodb.adoc:314
