--- a/l10n/po/ja_JP/_versions/1.7/guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/cassandra.adoc.po
@@ -700,7 +700,7 @@ msgstr "ブラウザで `http://localhost:8080/fruits.html` を開きます。"
 #: upstream/_versions/1.7/guides/cassandra.adoc:395
 #: upstream/_versions/1.7/guides/cassandra.adoc:538
 msgid "add new fruits to the list via the form"
-msgstr ""
+msgstr "フォームを使って新しいフルーツをリストに追加します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/cassandra.adoc:397
