--- a/l10n/po/ja_JP/_versions/2.2/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/mongodb.adoc.po
@@ -520,12 +520,12 @@ msgstr "開発サービス（コンフィグレーション・フリー・デー
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:249
 msgid "Quarkus supports a feature called Dev Services that allows you to create various datasources without any config. In the case of MongoDB this support extends to the default MongoDB connection.  What that means practically, is that if you have not configured `quarkus.mongodb.connection-string` Quarkus will automatically start a MongoDB container when running tests or dev-mode, and automatically configure the connection."
-msgstr ""
+msgstr "QuarkusはDev Servicesと呼ばれる機能をサポートしており、設定なしで様々なデータソースを作成することができます。MongoDBの場合、このサポートはデフォルトのMongoDB接続にまで及びます。実際には、 `quarkus.mongodb.connection-string` を設定していない場合、Quarkusはテストやdev-modeの実行時に自動的にMongoDBコンテナを起動し、接続を自動的に設定します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:252
 msgid "When running the production version of the application, the MongoDB connection need to be configured as normal, so if you want to include a production database config in your `application.properties` and continue to use Dev Services we recommend that you use the `%prod.` profile to define your MongoDB settings."
-msgstr ""
+msgstr "本番環境のアプリケーションを実行する場合、MongoDBの接続は通常通りに設定する必要があります。本番環境のデータベースの設定を `application.properties` に含めてDev Servicesを継続して使用する場合は、 `%prod.` プロファイルを使用してMongoDBの設定を定義することをお勧めします。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mongodb.adoc:255
@@ -624,7 +624,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/mongodb.adoc:311
 msgid "If you use <<dev-services,Dev Services>>, launching the container manually is not necessary!"
-msgstr ""
+msgstr "link:#dev-services[Dev Services]を使用している場合は、手動でコンテナを起動する必要はありません。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mongodb.adoc:314
@@ -655,7 +655,7 @@ msgstr "ブラウザで `http://localhost:8080/fruits.html` を開きます。"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:325
 msgid "add new fruits to the list via the form"
-msgstr ""
+msgstr "フォームを使って新しいフルーツをリストに追加します。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mongodb.adoc:327
@@ -688,7 +688,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/mongodb.adoc:344
 msgid "The MongoDB reactive client uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "MongoDBのリアクティブ・クライアントは、Mutinyのリアクティブ・タイプを使用しています。Mutinyに慣れていない方は、 link:mutiny-primer.html[Mutiny - an intuitive reactive programming library]をご覧ください。"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/mongodb.adoc:354
@@ -1173,27 +1173,27 @@ msgstr ""
 #: upstream/_versions/2.2/guides/mongodb.adoc:620
 #, no-wrap
 msgid "Testing helpers"
-msgstr ""
+msgstr "テストヘルパー"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:623
 msgid "To start a MongoDB database for your unit tests, Quarkus provides two `QuarkusTestResourceLifecycleManager` that relies on link:https://github.com/flapdoodle-oss/de.flapdoodle.embed.mongo[Flapdoodle embedded MongoDB]."
-msgstr ""
+msgstr "ユニットテスト用にMongoDBデータベースを起動するために、Quarkusは link:https://github.com/flapdoodle-oss/de.flapdoodle.embed.mongo[Flapdoodle embedded MongoDB]に依存する2つの `QuarkusTestResourceLifecycleManager` を提供しています。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:625
 msgid "`io.quarkus.test.mongodb.MongoTestResource` will start a single instance on port 27017."
-msgstr ""
+msgstr "`io.quarkus.test.mongodb.MongoTestResource` は、ポート27017に単一のインスタンスを起動します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:626
 msgid "`io.quarkus.test.mongodb.MongoReplicaSetTestResource` will start a replicaset with two instances, one on port 27017 and the other on port 27018."
-msgstr ""
+msgstr "`io.quarkus.test.mongodb.MongoReplicaSetTestResource` は、ポート27017とポート27018にある2つのインスタンスでレプリカセットを開始します。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:628
 msgid "To use them, you need to add the `io.quarkus:quarkus-test-mongodb` dependency to your pom.xml."
-msgstr ""
+msgstr "これらを使用するには、 `io.quarkus:quarkus-test-mongodb` の依存関係を pom.xml に追加する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:630
@@ -1278,7 +1278,7 @@ msgstr "link:https://docs.mongodb.com/manual/core/security-client-side-encryptio
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/mongodb.adoc:677
 msgid "If you encounter the following error when running your application in native mode: + `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can't find a codec for class org.acme.MyVariable.` + This means that the `org.acme.MyVariable` class is not known to GraalVM, the remedy is to add the `@RegisterForReflection` annotation to your `MyVariable class`.  More details about the `@RegisterForReflection` annotation can be found on the xref:writing-native-applications-tips.adoc#registerForReflection[native application tips] page."
-msgstr ""
+msgstr "アプリケーションをネイティブモードで実行した際に、以下のようなエラーが発生した場合があります。+ `Failed to encode 'MyObject'. Encoding 'myVariable' errored with: Can’t find a codec for class org.acme.MyVariable.` + これは、 `org.acme.MyVariable` クラスがGraalVMに知られていないことを意味しています。対策としては、 `@RegisterForReflection` アノテーションを `MyVariable class` に追加してください。 `@RegisterForReflection` アノテーションの詳細については、 link:writing-native-applications-tips.html#registerForReflection[ネイティブアプリケーションのヒント]のページをご覧ください。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/mongodb.adoc:679
