--- a/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
@@ -996,7 +996,7 @@ msgstr ""
 #: upstream/_versions/main/guides/infinispan-client.adoc:537
 #, no-wrap
 msgid "Testing helpers"
-msgstr ""
+msgstr "テストヘルパー"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/infinispan-client.adoc:540
@@ -1016,7 +1016,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/infinispan-client.adoc:546
 msgid "For more information about the usage of a `QuarkusTestResourceLifecycleManager` please read xref:getting-started-testing.adoc#quarkus-test-resource[Quarkus test resource]."
-msgstr ""
+msgstr "`QuarkusTestResourceLifecycleManager` の使い方については、 link:getting-started-testing.html#quarkus-test-resource[Quarkusのテストリソース]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/infinispan-client.adoc:547
