--- a/l10n/po/ja_JP/_versions/2.2/guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/rest-json.adoc.po
@@ -618,7 +618,7 @@ msgstr "ブラウザで `http://localhost:8080/fruits.html` を開きます。"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/rest-json.adoc:318
 msgid "add new fruits to the list via the form"
-msgstr ""
+msgstr "フォームを使って新しいフルーツをリストに追加します。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/rest-json.adoc:319
