Update .po files

--- a/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
+++ b/l10n/po/ja_JP/_includes/get-started-code-steps.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-02-27 21:10+0000\n"
 "PO-Revision-Date: 2021-12-03 15:16+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -58,7 +58,9 @@ msgstr "&lt;code&gt;iex \"&amp; { $(iwr https://ps.jbang.dev ) } app install --f
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/get-started-code-steps.html:22
-msgid "If it's your first time to install, you'll need ot restart your shell."
+#, fuzzy
+#| msgid "If it's your first time to install, you'll need ot restart your shell."
+msgid "If it's your first time to install, you'll need to restart your shell."
 msgstr "初めてのインストールの場合は、シェルを再起動する必要があります。"
 
 #. type: Content of: <div><div><div><h4>
