--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-26 02:22+0000\n"
+"POT-Creation-Date: 2022-03-02 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -653,15 +653,15 @@ msgstr "ネイティブ関連のプロパティーは、 `application.properties
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/gradle-tooling.adoc:409
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "quarkusBuild {\n"
 "    nativeArgs {\n"
 "        containerBuild = true <1>\n"
-"        buildImage = \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
+"        builderImage = \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
 "    }\n"
 "}\n"
-msgstr ""
+msgstr "デフォルトでは、 `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`  Dockerイメージを使用してネイティブ実行可能ファイルが生成されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/gradle-tooling.adoc:412
@@ -673,7 +673,7 @@ msgstr "`quarkus.native.container-build` プロパティーを `true`"
 #: upstream/_versions/main/guides/gradle-tooling.adoc:413
 #: upstream/_versions/main/guides/gradle-tooling.adoc:430
 #, fuzzy
-msgid "Set `quarkus.native.build-image` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
+msgid "Set `quarkus.native.builder-image` property to `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`"
 msgstr "デフォルトでは、 `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`  Dockerイメージを使用してネイティブ実行可能ファイルが生成されます。"
 
 #. type: delimited block -
@@ -683,7 +683,7 @@ msgid ""
 "tasks.quarkusBuild {\n"
 "    nativeArgs {\n"
 "        \"container-build\" to true <1>\n"
-"        \"build-image\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
+"        \"builder-image\" to \"quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}\" <2>\n"
 "    }\n"
 "}\n"
 msgstr "デフォルトでは、 `quay.io/quarkus/ubi-quarkus-native-image:{graalvm-flavor}`  Dockerイメージを使用してネイティブ実行可能ファイルが生成されます。"
