--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2022-03-02 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,12 +29,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:9
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:44
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:11
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:46
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -63,7 +65,7 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:21
 #: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:31
-#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:40
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:41
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -92,4 +94,36 @@ msgid ""
 "Define whether more than one constraint on a return value may be marked for cascading validation are allowed. The default value is `false`, i.e. do not allow. \n"
 " See Section 4.5.5 of the JSR 380 specification, specifically \"One must not mark a method return value for cascaded validation more than once in a line of a class hierarchy. In other words, overriding methods on sub types (be it sub classes/interfaces or interface implementations) cannot mark the return value for cascaded validation if the return value has already been marked on the overridden method of the super type or interface.\"\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:43
+#, no-wrap
+msgid "[[quarkus-hibernate-validator-general-config-items_quarkus.hibernate-validator.expression-language-expression-language]]link:#quarkus-hibernate-validator-general-config-items_quarkus.hibernate-validator.expression-language-expression-language[Expression Language]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:53
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-hibernate-validator-general-config-items_quarkus.hibernate-validator.expression-language.constraint-expression-feature-level]]`link:#quarkus-hibernate-validator-general-config-items_quarkus.hibernate-validator.expression-language.constraint-expression-feature-level[quarkus.hibernate-validator.expression-language.constraint-expression-feature-level]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Configure the Expression Language feature level for constraints, allowing the selection of Expression Language features available for message interpolation. \n"
+" This property only affects the EL feature level of \"static\" constraint violation messages set through the `message` attribute of constraint annotations. \n"
+" In particular, it doesn't affect the default EL feature level for custom violations created programmatically in validator implementations. The feature level for those can only be configured directly in the validator implementation.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:54
+#, no-wrap
+msgid "`default`, `none`, `variables`, `bean-properties`, `bean-methods`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-hibernate-validator-general-config-items.adoc:56
+#, no-wrap
+msgid "`bean-properties`"
 msgstr ""
