--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-22 02:26+0000\n"
+"POT-Creation-Date: 2022-03-02 02:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -138,7 +138,7 @@ msgid ""
 "[.description]\n"
 "--\n"
 "The container image name to use, for container based DevServices providers. Image with a Quarkus based Keycloak-X distribution is used by default. Image with a WildFly based Keycloak distribution can be selected instead, for example: 'quay.io/keycloak/keycloak:16.1.0'. \n"
-" Note Keycloak-X and Keycloak images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak-X image if the image name contains a 'keycloak-x' string. Set 'quarkus.devservices.keycloak.keycloak-x-image' to override this check.\n"
+" Note Keycloak-X and Keycloak images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak-X image if the image name contains a 'keycloak-x' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check.\n"
 "--"
 msgstr ""
 
@@ -272,7 +272,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"If Keycloak-X image is used. By default, Dev Services for Keycloak will assume a Keycloak-X image is used if the image name contains a 'keycloak-x' string. Set 'quarkus.devservices.keycloak.keycloak-x-image' to override this check which may be necessary if you build custom Keycloak-X or Keycloak images. You do not need to set this property if the default check works.\n"
+"If Keycloak-X image is used. By default, Dev Services for Keycloak will assume a Keycloak-X image is used if the image name contains a 'keycloak-x' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check which may be necessary if you build custom Keycloak-X or Keycloak images. You do not need to set this property if the default check works.\n"
 "--"
 msgstr ""
 
