Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:07+0000\n"
+"POT-Creation-Date: 2022-03-02 16:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -85,7 +85,35 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:48
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:52
+#, no-wrap
+msgid ""
+"[[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.suppress-non-application-uris]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.suppress-non-application-uris[quarkus.micrometer.binder.http-server.suppress-non-application-uris]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Suppress non-application uris from metrics collection.\n"
+"This will suppress all metrics for non-application endpoints using\n"
+"`${quarkus.http.root-path}/${quarkus.http.non-application-root-path}`.\n"
+"\n"
+"Suppressing non-application uris is enabled by default.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:53
+#, no-wrap
+msgid "boolean"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:56
+#, no-wrap
+msgid "`true`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:61
 #, no-wrap
 msgid ""
 "[[quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags]]`link:#quarkus-micrometer-binder-http-server-config-runtime-http-server-config_quarkus.micrometer.binder.http-server.max-uri-tags[quarkus.micrometer.binder.http-server.max-uri-tags]`\n"
@@ -97,13 +125,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:49
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:62
 #, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:51
+#: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:64
 #, no-wrap
 msgid "`100`"
 msgstr ""
