Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc.po
@@ -104,13 +104,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:53
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:56
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-micrometer-binder-http-server-config-runtime-http-server-config.adoc:61
