--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-jib-jib-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-jib-jib-config.adoc.po
@@ -358,7 +358,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-jib-jib-config.adoc:178
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-jib-jib-config.adoc:183
