--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -240,6 +240,7 @@ l10n/po/ja_JP/_guides/smallrye-kafka-outgoing.adoc.po, 83, 83, 937, 937 ,0%
 l10n/po/ja_JP/_guides/smallrye-kafka-incoming.adoc.po, 101, 101, 1205, 1205 ,0%
 l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po, 16, 16, 327, 327 ,0%
 l10n/po/ja_JP/_guides/includes/devtools/prerequisites.adoc.po, 11, 11, 79, 79 ,0%
+l10n/po/ja_JP/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc.po, 0, 15, 0, 162 ,100%
 l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po, 0, 73, 0, 998 ,100%
 l10n/po/ja_JP/_posts/2022-01-20-quarkus-2-6-3-final-released.adoc.po, 0, 14, 0, 150 ,100%
 l10n/po/ja_JP/_posts/2022-01-13-quarkus-insights-qanda3.adoc.po, 0, 6, 0, 100 ,100%
