Add machine translation

--- a/l10n/po/ja_JP/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.3.Final released - Maintenance release'\n"
@@ -34,26 +34,37 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 2.7.3.Final リリース - メンテナンスリリース'\n"
+"date: 2022-03-02\n"
+"tags: release\n"
+"synopsis: 2.7.3.Final は、2.7 リリーストレインの 3 回目のメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:11
+#, fuzzy
 msgid "Today, we released a new maintenance release for our 2.7 release train: 2.7.3.Final."
-msgstr ""
+msgstr "本日、2.7リリーストレインの新しいメンテナンスリリース：2.7.3.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:13
+#, fuzzy
 msgid "Thanks to all the people reporting issues, providing reproducers, fixes..., it's really appreciated."
-msgstr ""
+msgstr "問題を報告してくれる人、再現プログラムを提供してくれる人、修正してくれる人...、本当にありがとうございました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:15
+#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.7."
-msgstr ""
+msgstr "すでに2.7をお使いの方も安心してアップグレードしていただけます。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:17
+#, fuzzy
 msgid "If you are not using 2.7 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7 migration guide]."
-msgstr ""
+msgstr "まだ2.7をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイドを]ご参照ください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:18
@@ -63,8 +74,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:21
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.3.Final[the full changelog of 2.7.3.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.3.Final[2.7.3.Final の完全な変更履歴は、GitHub で]入手できます。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:22
