--- a/l10n/stats/override.csv
+++ b/l10n/stats/override.csv
@@ -1,7 +1,7 @@
 Filename, Last modified, Upstream Last modified, Up to date
 l10n/override/ja_JP/_data/projectfooter.yaml, 2021-12-04 13:54:46 +0000, 2021-12-04 01:17:48 +0000, OK
 l10n/override/ja_JP/_includes/homepage-video-band.html, 2021-02-06 14:23:31 +0000, 2019-11-04 22:19:28 +0000, OK
-l10n/override/ja_JP/_includes/recent-posts-band.html, 2022-01-17 11:03:16 +0000, 2021-12-01 20:34:05 +0000, OK
+l10n/override/ja_JP/_includes/recent-posts-band.html, 2022-01-17 11:03:16 +0000, 2022-03-02 16:30:22 +0000, NG
 l10n/override/ja_JP/blog.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
 l10n/override/ja_JP/_guides/guides.md, 2021-05-21 13:26:13 +0000, 2021-05-20 08:48:44 +0000, OK
 l10n/override/ja_JP/_layouts/extensions.html, 2021-02-06 14:23:31 +0000, 2019-08-01 09:53:08 +0000, OK
