--- a/l10n/po/ja_JP/_versions/main/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-oauth2.adoc.po
@@ -96,7 +96,7 @@ msgstr "Mavenプラグインを使用したくない場合は、pom.xmlに依存
 #: upstream/_versions/main/guides/security-oauth2.adoc:332
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-oauth2.adoc:53
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-oauth2.adoc:344
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-oauth2.adoc:59
@@ -530,7 +530,7 @@ msgstr "アプリケーションをパッケージ化して実行する"
 #. type: Plain text
 #: upstream/_versions/main/guides/security-oauth2.adoc:281
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-oauth2.adoc:285
