--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-fault-tolerance.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-fault-tolerance.adoc.po
@@ -113,7 +113,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:487
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:65
@@ -131,7 +131,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:496
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-fault-tolerance.adoc:71
