--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-health.adoc.po
@@ -108,7 +108,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/smallrye-health.adoc:431
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-health.adoc:64
@@ -130,7 +130,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-health.adoc:440
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-health.adoc:70
