--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-metrics.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-metrics.adoc.po
@@ -120,7 +120,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-metrics.adoc:60
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-metrics.adoc:66
@@ -136,7 +136,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-metrics.adoc:69
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-metrics.adoc:72
