--- a/l10n/po/ja_JP/_versions/main/guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-cache.adoc.po
@@ -80,7 +80,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-cache.adoc:38
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-cache.adoc:44
@@ -96,7 +96,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-cache.adoc:47
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-cache.adoc:50
