--- a/l10n/po/ja_JP/_versions/main/guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-cloud-config-client.adoc.po
@@ -90,7 +90,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-cloud-config-client.adoc:44
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-cloud-config-client.adoc:50
@@ -106,7 +106,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-cloud-config-client.adoc:53
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-cloud-config-client.adoc:56
