--- a/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
@@ -183,7 +183,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork.adoc:82
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork.adoc:92
@@ -203,7 +203,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork.adoc:95
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/stork.adoc:99
