--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
@@ -125,7 +125,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:59
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:65
@@ -141,7 +141,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:68
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:71
