--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect.adoc.po
@@ -166,7 +166,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/security-openid-connect.adoc:934
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect.adoc:79
@@ -187,7 +187,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect.adoc:944
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-openid-connect.adoc:85
