--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
@@ -127,7 +127,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:84
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:94
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:97
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:101
