--- a/l10n/po/ja_JP/_versions/main/guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-data-rest.adoc.po
@@ -90,7 +90,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-data-rest.adoc:68
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-data-rest.adoc:55
@@ -107,7 +107,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-data-rest.adoc:78
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-data-rest.adoc:61
