--- a/l10n/po/ja_JP/_versions/main/guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-di.adoc.po
@@ -94,7 +94,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-di.adoc:46
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-di.adoc:52
@@ -110,7 +110,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-di.adoc:55
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-di.adoc:58
