--- a/l10n/po/ja_JP/_versions/main/guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-security.adoc.po
@@ -99,7 +99,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-security.adoc:47
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-security.adoc:65
@@ -127,7 +127,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-security.adoc:68
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-security.adoc:74
@@ -270,7 +270,7 @@ msgstr "アプリケーションをネイティブ実行可能ファイルとし
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-security.adoc:138
 msgid "Open your browser to http://localhost:8080/greeting."
-msgstr ""
+msgstr "ブラウザで http://localhost:8080/greeting を開きます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-security.adoc:140
