--- a/l10n/po/ja_JP/_versions/main/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-web.adoc.po
@@ -99,7 +99,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/spring-web.adoc:48
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-web.adoc:58
@@ -119,7 +119,7 @@ msgstr ""
 #: upstream/_versions/main/guides/spring-web.adoc:61
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-web.adoc:65
