--- a/l10n/po/ja_JP/_versions/main/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/websockets.adoc.po
@@ -107,7 +107,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/websockets.adoc:51
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/websockets.adoc:57
@@ -123,7 +123,7 @@ msgstr ""
 #: upstream/_versions/main/guides/websockets.adoc:60
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/websockets.adoc:63
@@ -319,7 +319,7 @@ msgstr "image:websocket-guide-screenshot.png[alt=Application]"
 #. type: Plain text
 #: upstream/_versions/main/guides/websockets.adoc:157
 msgid "As usual, the application can be packaged using:"
-msgstr ""
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/websockets.adoc:161
@@ -329,7 +329,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/websockets.adoc:163
 msgid "You can also build the native executable using:"
-msgstr ""
+msgstr "ネイティブ実行可能ファイルを次のようにビルドすることもできます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/websockets.adoc:167
