Add some translations

--- a/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-23 16:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-03-05 13:36+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.2.Final released - Maintenance release'\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.7.2.Final released - Maintenance release'\n"
+"title: 'Quarkus 2.7.2.Final リリース - メンテナンスリリース'\n"
 "date: 2022-02-23\n"
 "tags: release\n"
 "synopsis: 2.7.2.Finalは、2.7リリーストレインの2回目のメンテナンスリリースです。\n"
@@ -44,43 +44,38 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:11
-#, fuzzy
 msgid "It is our pleasure to announce the release of Quarkus 2.7.2.Final, our second maintenance release for our 2.7 release train."
-msgstr "Quarkus 2.7.2.Finalのリリースを発表できることを嬉しく思います。"
+msgstr "Quarkus 2.7.2.Finalのリリースを発表できることを嬉しく思います。2.7リリーストレインの二つ目のメンテナンスリリースです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:14
-#, fuzzy
 msgid "Some bugfixes are a bit more involved than what we usually include in maintenance releases, so if you encounter any issue upgrading, please report them with as many details as you can (and preferably with a reproducer) in https://github.com/quarkusio/quarkus/issues[our tracker]."
-msgstr "いくつかのバグフィックスは、通常のメンテナンスリリースに含まれているものよりも、もう少し複雑なものになっていますので、もし問題のアップグレードに遭遇した場合は、できるだけ詳細に（できれば再現者も含めて） link:https://github.com/quarkusio/quarkus/issues[私たちのトラッカー]に報告してください。"
+msgstr "いくつかのバグフィックスは、通常のメンテナンスリリースに含まれているものよりも、もう少し複雑なものになっていますので、もしアップグレードで問題に遭遇した場合は、できるだけ詳細に（できれば再現手順も含めて） link:https://github.com/quarkusio/quarkus/issues[課題管理]に報告してください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:16
-#, fuzzy
 msgid "It should be a safe upgrade for anyone already using 2.7 though."
-msgstr "すでに2.7をお使いの方も安心してアップグレードできます。"
+msgstr "これは、すでに2.7を使用している人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:18
-#, fuzzy
 msgid "If you are not using 2.7 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7 migration guide]."
-msgstr "すでに2.7を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド]を参照してください。"
+msgstr "まだ2.7を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "What's new"
-msgstr "最新情報"
+msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Kogito and OptaPlanner upgrades"
-msgstr "KogitoとOptaPlannerのバージョンアップ"
+msgstr "KogitoとOptaPlannerのアップグレード"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:24
-#, fuzzy
 msgid "Kogito and OptaPlanner have been upgraded respectively to 1.17.0.Final and 8.17.0.Final."
 msgstr "KogitoとOptaPlannerがそれぞれ1.17.0.Finalと8.17.0.Finalにアップグレードされました。"
 
@@ -92,9 +87,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:28
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.2.Final[the full changelog of 2.7.2.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.2.Final[2.7.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.2.Final[2.7.2.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-02-23-quarkus-2-7-2-final-released.adoc:29
