--- a/l10n/po/ja_JP/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-02 17:15+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2022-03-05 13:31+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 2.7.3.Final released - Maintenance release'\n"
@@ -44,27 +44,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:11
-#, fuzzy
 msgid "Today, we released a new maintenance release for our 2.7 release train: 2.7.3.Final."
 msgstr "本日、2.7リリーストレインの新しいメンテナンスリリース：2.7.3.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:13
-#, fuzzy
 msgid "Thanks to all the people reporting issues, providing reproducers, fixes..., it's really appreciated."
 msgstr "問題を報告してくれる人、再現プログラムを提供してくれる人、修正してくれる人...、本当にありがとうございました。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:15
-#, fuzzy
 msgid "It is a safe upgrade for anyone already using 2.7."
-msgstr "すでに2.7をお使いの方も安心してアップグレードしていただけます。"
+msgstr "これは、すでに2.7を使用している人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:17
-#, fuzzy
 msgid "If you are not using 2.7 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7 migration guide]."
-msgstr "まだ2.7をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイドを]ご参照ください。"
+msgstr "まだ2.7をお使いでない方は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-2.7[2.7移行ガイド] を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:18
@@ -74,9 +70,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:21
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/2.7.3.Final[the full changelog of 2.7.3.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.3.Final[2.7.3.Final の完全な変更履歴は、GitHub で]入手できます。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/2.7.3.Final[2.7.3.Final の完全な変更履歴は、GitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-02-quarkus-2-7-3-final-released.adoc:22
