--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-kubernetes.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-02 02:28+0000\n"
+"POT-Creation-Date: 2022-03-06 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2480,7 +2480,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-kubernetes.adoc:939
-msgid "Following the execution of `./mvnw package -Dquarkus.container-image.build=true ` you will notice amongst the other files that are created, two files named `openshift.json` and `openshift.yml` in the `target/kubernetes/` directory."
+#, fuzzy
+#| msgid "Following the execution of `./mvnw package -Dquarkus.container-image.build=true ` you will notice amongst the other files that are created, two files named `openshift.json` and `openshift.yml` in the `target/kubernetes/` directory."
+msgid "Following the execution of `./mvnw package -Dquarkus.container-image.build=true` you will notice amongst the other files that are created, two files named `openshift.json` and `openshift.yml` in the `target/kubernetes/` directory."
 msgstr "`./mvnw package -Dquarkus.container-image.build=true` の実行後に、 `target/kubernetes/` ディレクトリーに `openshift.json` と `openshift.yml` という名前の2つのファイルが作成されたことに気づくでしょう。"
 
 #. type: Plain text
