--- a/l10n/po/ja_JP/_versions/main/guides/native-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/native-reference.adoc.po
@@ -85,7 +85,7 @@ msgstr "最後に、このガイドでは、ネイティブ実行可能ファイ
 #: upstream/_versions/main/guides/native-reference.adoc:43
 #, no-wrap
 msgid "Bootstrapping the project"
-msgstr ""
+msgstr "プロジェクトのブートストラップ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:47
@@ -105,7 +105,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:58
 msgid "If using cmd , (don't use backward slash `\\` and put everything on the same line)"
-msgstr ""
+msgstr "cmd を使っている場合 (バックスラッシュは使わず、全て同じ行にしてください)"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/native-reference.adoc:59
@@ -860,6 +860,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/native-reference.adoc:508
