--- a/l10n/po/ja_JP/_versions/main/guides/rabbitmq-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/rabbitmq-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-10 02:16+0000\n"
+"POT-Creation-Date: 2022-03-08 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -812,16 +812,16 @@ msgid ""
 "        .setSsl(true)\n"
 "        .setPemKeyCertOptions(keycert)\n"
 "        .setPemTrustOptions(trust)\n"
-"        .setUser(\"user1\");\n"
-"        .setPassword(\"password1\");\n"
-"        .setHost(\"localhost\");\n"
-"        .setPort(5672);\n"
-"        .setVirtualHost(\"vhost1\");\n"
-"        .setConnectionTimeout(6000); // in milliseconds\n"
-"        .setRequestedHeartbeat(60); // in seconds\n"
-"        .setHandshakeTimeout(6000); // in milliseconds\n"
-"        .setRequestedChannelMax(5);\n"
-"        .setNetworkRecoveryInterval(500); // in milliseconds\n"
+"        .setUser(\"user1\")\n"
+"        .setPassword(\"password1\")\n"
+"        .setHost(\"localhost\")\n"
+"        .setPort(5672)\n"
+"        .setVirtualHost(\"vhost1\")\n"
+"        .setConnectionTimeout(6000) // in milliseconds\n"
+"        .setRequestedHeartbeat(60) // in seconds\n"
+"        .setHandshakeTimeout(6000) // in milliseconds\n"
+"        .setRequestedChannelMax(5)\n"
+"        .setNetworkRecoveryInterval(500) // in milliseconds\n"
 "        .setAutomaticRecoveryEnabled(true);\n"
 "}\n"
 msgstr ""
