--- a/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-sql-clients.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-03-08 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,12 +74,14 @@ msgstr "Oracle"
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/reactive-sql-clients.adoc:23
-msgid "The Reactive SQL Client for Oracle is considered _experimental_."
+msgid "The Reactive SQL Client for Oracle is considered _tech preview_."
 msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/reactive-sql-clients.adoc:27
-msgid "In _experimental_ mode, early feedback is requested to mature the idea.  There is no guarantee of stability nor long term presence in the platform until the solution matures.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
+#, fuzzy
+#| msgid "In _experimental_ mode, early feedback is requested to mature the idea.  There is no guarantee of stability nor long term presence in the platform until the solution matures.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
+msgid "In _tech preview_ mode, early feedback is requested to mature the idea.  There is no guarantee of stability in the platform until the solution matures.  Feedback is welcome on our https://groups.google.com/d/forum/quarkus-dev[mailing list] or as issues in our https://github.com/quarkusio/quarkus/issues[GitHub issue tracker]."
 msgstr "_experimental_ モードでは、アイデアを成熟させるために早期のフィードバックが求められます。ソリューションが成熟するまでの間、プラットフォームの安定性や長期的な存在を保証するものではありません。フィードバックは link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト] や link:https://github.com/quarkusio/quarkus/issues[GitHubの課題管理] で受け付けています。"
 
 #. type: Plain text
