--- a/l10n/po/ja_JP/_versions/main/guides/capabilities.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/capabilities.adoc.po
@@ -58,7 +58,7 @@ msgstr "エクステンション記述子を生成する `quarkus-bootstrap-mave
 #: upstream/_versions/main/guides/capabilities.adoc:79
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/capabilities.adoc:35
