--- a/l10n/po/ja_JP/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc.po
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:19
 #, no-wrap
 msgid "quarkus-tools1.png"
-msgstr ""
+msgstr "quarkus-tools1.png"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:22
@@ -99,23 +99,23 @@ msgstr ""
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:37
 #, no-wrap
 msgid "Moving Forward"
-msgstr ""
+msgstr "将来"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:41
 msgid "If you have any questions, suggestions or feedback, by all means please https://github.com/redhat-developer/intellij-quarkus/issues[open an issue]."
-msgstr ""
+msgstr "ご質問、ご意見、ご感想などがありましたら、ぜひ link:https://github.com/redhat-developer/intellij-quarkus/issues[イシューを開いて]ください。"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:43
 msgid "Thank you for reading and stay tuned for the next release!"
-msgstr ""
+msgstr "お読みいただきありがとうございました。次のリリースをお待ちください!"
 
 #. type: Title ==
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:44
 #, no-wrap
 msgid "Links"
-msgstr ""
+msgstr "リンク"
 
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:47
@@ -125,4 +125,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_posts/2022-03-08-intellij-quarkus-tools-1.10.0.adoc:47
 msgid "Open an issue: https://github.com/redhat-developer/intellij-quarkus/issues"
-msgstr ""
+msgstr "課題を開く https://github.com/redhat-developer/intellij-quarkus/issues"
