Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/container-image.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-23 02:27+0000\n"
+"POT-Creation-Date: 2022-03-09 02:30+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -101,7 +101,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/container-image.adoc:49
-msgid "When the base image has not been changed (and therefore `ubi8/openjdk-11-runtime` or `ubi8/openjdk-17-runtime` is used), then the `quarkus.jib.jvm-arguments` configuration property can be used in order to make the JVM listen on the debug port at startup."
+msgid "When the base image has not been changed (and therefore `ubi8/openjdk-11-runtime` or `ubi8/openjdk-17-runtime` is used), then the `quarkus.jib.jvm-additional-arguments` configuration property can be used in order to make the JVM listen on the debug port at startup."
 msgstr ""
 
 #. type: Plain text
@@ -112,7 +112,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/container-image.adoc:55
 #, no-wrap
-msgid "quarkus.jib.jvm-arguments=-agentlib:jdwp=transport=dt_socket\\\\,server=y\\\\,suspend=n\\\\,address=*:5005\n"
+msgid "quarkus.jib.jvm-additional-arguments=-agentlib:jdwp=transport=dt_socket\\\\,server=y\\\\,suspend=n\\\\,address=*:5005\n"
 msgstr ""
 
 #. type: Plain text
