--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-docker-docker-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-docker-docker-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-17 02:23+0000\n"
+"POT-Creation-Date: 2022-03-09 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -47,7 +47,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Path to the the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.jvm will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root\n"
+"Path to the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.jvm will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root\n"
 "--"
 msgstr ""
 
@@ -68,7 +68,7 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"Path to the the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.native will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root\n"
+"Path to the JVM Dockerfile. If not set $++{++project.root++}++/src/main/docker/Dockerfile.native will be used If set to an absolute path then the absolute path will be used, otherwise the path will be considered relative to the project root\n"
 "--"
 msgstr ""
 
