--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-02 02:26+0000\n"
+"POT-Creation-Date: 2022-03-09 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -137,8 +137,8 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The container image name to use, for container based DevServices providers. Image with a Quarkus based Keycloak-X distribution is used by default. Image with a WildFly based Keycloak distribution can be selected instead, for example: 'quay.io/keycloak/keycloak:16.1.0'. \n"
-" Note Keycloak-X and Keycloak images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak-X image if the image name contains a 'keycloak-x' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check.\n"
+"The container image name to use, for container based DevServices providers. Image with a Quarkus based distribution is used by default. Image with a WildFly based distribution can be selected instead, for example: 'quay.io/keycloak/keycloak:17.0.0-legacy'. \n"
+" Note Keycloak Quarkus and Keycloak WildFly images are initialized differently. By default, Dev Services for Keycloak will assume it is a Keycloak Quarkus image if the image version does not end with a '-legacy' string. Set 'quarkus.keycloak.devservices.keycloak-x-image' to override this check.\n"
 "--"
 msgstr ""
 
@@ -261,7 +261,7 @@ msgstr "string"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-oidc.adoc:31
 #, no-wrap
-msgid "`quay.io/keycloak/keycloak-x:16.1.0`"
+msgid "`quay.io/keycloak/keycloak:17.0.0`"
 msgstr ""
 
 #. type: Table
