Apply translation memory

--- a/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/cli-tooling.adoc.po
@@ -92,7 +92,7 @@ msgstr ""
 #: upstream/_guides/cli-tooling.adoc:35
 #, no-wrap
 msgid "JBang"
-msgstr ""
+msgstr "JBang"
 
 #. type: delimited block *
 #: upstream/_guides/cli-tooling.adoc:38
@@ -272,7 +272,7 @@ msgstr ""
 #: upstream/_guides/cli-tooling.adoc:138
 #, no-wrap
 msgid "Homebrew"
-msgstr ""
+msgstr "Homebrew"
 
 #. type: Plain text
 #: upstream/_guides/cli-tooling.adoc:141
